--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.8",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
+    "@angular/forms": "^18.2.8",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
+    "angular-oauth2-oidc": "^17.0.2",
     "express": "^4.18.2",
+    "firebase": "^10.14.1",
+    "intl-tel-input": "^24.6.0",
+    "ng2-tel-input": "^2.3.0",
+    "ngx-intl-tel-input": "^3.2.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
