--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,9 +27,12 @@
               }
             ],
             "styles": [
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            
+            "scripts": [
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -90,9 +93,13 @@
               }
             ],
             "styles": [
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.css"
             ],
-            "scripts": []
+
+            "scripts": [
+              
+            ]
           }
         }
       }
