--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+    "serve:ssr:frontend": "node dist/frontend/server/server.mjs",
+    "dev": "vite",
+    "build:vite": "vite build",
+    "serve:vite": "vite preview"
   },
   "private": true,
   "dependencies": {
@@ -15,21 +18,27 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.8",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
+    "@types/intl-tel-input": "^18.1.4",
     "angular-oauth2-oidc": "^17.0.2",
+    "awesome-phonenumber": "^3.3.0",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
+    "google-libphonenumber": "^3.2.38",
     "intl-tel-input": "^24.6.0",
-    "ng2-tel-input": "^2.3.0",
+    "ngx-bootstrap": "^18.0.2",
     "ngx-intl-tel-input": "^3.2.0",
+    "ngx-intl-tel-input-gg": "^1.0.12",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -48,6 +57,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "vite": "^5.4.10",
+    "vite-plugin-vue2": "^2.0.3"
   }
 }
