--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,10 +32,13 @@
     "firebase": "^10.14.1",
     "google-libphonenumber": "^3.2.38",
     "intl-tel-input": "^24.6.0",
+    "ng-recaptcha": "^13.2.1",
     "ngx-bootstrap": "^18.0.2",
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-intl-tel-input-gg": "^1.0.12",
     "ngx-toastr": "^19.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
